--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Shenile A - Personal Homepage</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <style>
+        /* Additional custom styles */
+        @media (min-width: 640px) {
+            /* Adjust margins for larger screens */
+            .container {
+                max-width: 960px; /* Adjust based on your design */
+            }
+        }
+
+        /* Custom hover effect for links */
+        .text-content-blue:hover {
+            color: #3B82F6; /* Tailwind blue color */
+        }
+    </style>
 </head>
 <body class="bg-gray-100 text-gray-900 font-sans">
     <header class="bg-gray-800 text-white py-4">
@@ -14,25 +28,25 @@
             <nav class="mb-2">
                 <ul class="flex space-x-4">
                     <li>
-                        <a href="mailto:sshenile07@gmail.com" class="flex items-center text-blue-500 hover:underline">
+                        <a href="mailto:sshenile07@gmail.com" class="flex items-center text-white hover:text-content-blue hover:underline">
                             <span class="mr-2"><i class="fas fa-envelope"></i></span>
                             sshenile07@gmail.com
                         </a>
                     </li>
                     <li>
-                        <a href="tel:9626813831" class="flex items-center text-blue-500 hover:underline">
+                        <a href="tel:9626813831" class="flex items-center text-white hover:text-content-blue hover:underline">
                             <span class="mr-2"><i class="fas fa-phone"></i></span>
                             9626813831
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/shenile-a" target="_blank" class="flex items-center text-blue-500 hover:underline">
+                        <a href="https://www.linkedin.com/in/shenile-a-86252b268/" target="_blank" class="flex items-center text-white hover:text-content-blue hover:underline">
                             <span class="mr-2"><i class="fab fa-linkedin"></i></span>
                             LinkedIn
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/Shenile" target="_blank" class="flex items-center text-blue-500 hover:underline">
+                        <a href="https://github.com/Shenile" target="_blank" class="flex items-center text-white hover:text-content-blue hover:underline">
                             <span class="mr-2"><i class="fab fa-github"></i></span>
                             GitHub
                         </a>
@@ -41,7 +55,7 @@
             </nav>
         </div>
     </header>
-    <main class="container mx-auto py-8 px-4">
+    <main class="container mx-auto py-8 px-4 lg:px-8">
         <section class="mb-8">
             <h2 class="text-2xl font-bold mb-4">About Me</h2>
             <p class="text-lg leading-relaxed">
@@ -52,13 +66,17 @@
             <h2 class="text-2xl font-bold mb-4">Projects</h2>
             <article class="mb-4">
                 <h3 class="text-xl font-bold mb-2">QR Code Generator</h3>
-                <p class="text-lg leading-relaxed mb-2">Developed a QR Code Generator application using Node.js and Express.js, integrated with a frontend interface.</p>
-                <a href="https://github.com/Shenile/Project-QR-code-Generator" target="_blank" class="text-blue-500 hover:underline">GitHub Repository</a>
+                <p class="text-lg leading-relaxed mb-2">
+                    Developed a QR Code Generator application using Node.js and Express.js, integrated with a frontend interface.
+                </p>
+                <a href="https://github.com/Shenile/Project-QR-code-Generator" target="_blank" class="text-gray-700 hover:text-content-blue hover:underline">GitHub Repository</a>
             </article>
             <article class="mb-4">
                 <h3 class="text-xl font-bold mb-2">Content-Based Movie Recommendation System</h3>
-                <p class="text-lg leading-relaxed mb-2">Implemented a content-based movie recommendation system using Python, TF-IDF vectorization, and cosine similarity.</p>
-                <a href="https://github.com/Shenile/Movie_Recommendation_System" target="_blank" class="text-blue-500 hover:underline">GitHub Repository</a>
+                <p class="text-lg leading-relaxed mb-2">
+                    Implemented a content-based movie recommendation system using Python, TF-IDF vectorization, and cosine similarity.
+                </p>
+                <a href="https://github.com/Shenile/Movie_Recommendation_System" target="_blank" class="text-gray-700 hover:text-content-blue hover:underline">GitHub Repository</a>
             </article>
         </section>
         <section>
